src/src/objects/CANDIDATES__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CANDIDATES</relationshipLabel>
        <relationshipName>CANDIDATES</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CANDIDATES</relationshipLabel>
        <relationshipName>CANDIDATES</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXPERIENCE__c</fullName>
        <label>EXPERIENCE</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INTER_STATUS__c</fullName>
        <label>INTER STATUS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SUBMITTED</fullName>
                </value>
                <value>
                    <fullName>L1-ACCEPT</fullName>
                </value>
                <value>
                    <fullName>L1-REJECT</fullName>
                </value>
                <value>
                    <fullName>L2-ACCEPT</fullName>
                </value>
                <value>
                    <fullName>L2-REJECT</fullName>
                </value>
                <value>
                    <fullName>HR-ACCEPT</fullName>
                </value>
                <value>
                    <fullName>HR-REJECT</fullName>
                </value>
                <value>
                    <fullName>OFFER APPROVED</fullName>
                </value>
                <value>
                    <fullName>RECALLED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QUALIFICATION_COLURSE__c</fullName>
        <label>QUALIFICATION COLURSE</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>AZURE</fullName>
                </value>
                <value>
                    <fullName>DEVOPS</fullName>
                </value>
                <value>
                    <fullName>SFDC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CANDIDATE</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CANDIDATES Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CANDIDATES</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>